[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Branch.tres" type="Texture" id=1]
[ext_resource path="res://objects/Experimenter/Experimenter.gd" type="Script" id=2]
[ext_resource path="res://objects/Experimenter/Camera.gd" type="Script" id=3]
[ext_resource path="res://objects/Experimenter/ItemPlacementTool.gd" type="Script" id=4]
[ext_resource path="res://assets/Crab/moving.png" type="Texture" id=5]
[ext_resource path="res://assets/beach_tileset.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 7.46714

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 195, 242, 12, 12 )

[node name="Experimenter" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 907.558, 402.808 )
current = true
limit_left = -250
limit_top = -1000
limit_right = 3000
limit_bottom = 1600
script = ExtResource( 3 )

[node name="ItemPlacementTool" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="PlacementSensor" type="Area2D" parent="ItemPlacementTool"]
collision_layer = 0
collision_mask = 22

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemPlacementTool/PlacementSensor"]
shape = SubResource( 1 )

[node name="Sprites" type="Node2D" parent="ItemPlacementTool"]

[node name="branch" type="Sprite" parent="ItemPlacementTool/Sprites"]
visible = false
texture = ExtResource( 1 )

[node name="crab" type="Sprite" parent="ItemPlacementTool/Sprites"]
visible = false
texture = SubResource( 2 )

[node name="stone" type="Sprite" parent="ItemPlacementTool/Sprites"]
visible = false
texture = SubResource( 3 )
[connection signal="place_item" from="ItemPlacementTool" to="." method="_on_ItemPlacementTool_place_item"]
[connection signal="body_entered" from="ItemPlacementTool/PlacementSensor" to="ItemPlacementTool" method="_on_PlacementSensor_body_entered"]
[connection signal="body_exited" from="ItemPlacementTool/PlacementSensor" to="ItemPlacementTool" method="_on_PlacementSensor_body_exited"]
